# VpnHood.Core.Quic.MsQuic.AndroidNative

.github/workflows/: android-publish.yml  build-reuse-win.yml  cargo.yml  code-coverage.yml  stress.yml  test-down-level.yml  test.yml
android/: .gitignore  DEV-GUIDE.md  README.md  build-android.ps1
android/AndroidNative/: .gitignore  README.md  VpnHood.Core.Quic.MsQuic.AndroidNative.csproj
android/AndroidNative/Bindings/: MsQuicException.cs  msquic.cs  msquic_extensions.cs  msquic_generated.cs  msquic_generated_linux.cs  msquic_generated_macos.cs  msquic_generated_windows.cs
android/quic-shared/: QuicEchoTester.cs
android/quic-test/: Program.cs  quic-test.csproj
android/quic-test-android/: AndroidManifest.xml  LibraryEcho.cs  MainActivity.cs  quic-test-android.csproj
scripts/: publicize-bindings.ps1
src/cs/lib/: MsQuicException.cs  msquic.cs  msquic_extensions.cs
submodules/: CMakeLists.txt  apply_openssl_patches.cmake  fix_openssl_makefile.cmake
submodules/patches/: openssl-15-android-windows.patch
